@@ -18,6 +18,7 @@ include trytond/ir/ui/*.rnc
 include trytond/ir/ui/icons/*.svg
 include trytond/res/tryton.cfg
 include trytond/res/*.xml
+include trytond/res/*.html
 include trytond/res/view/*.xml
 include trytond/res/locale/*.po
 include trytond/tests/tryton.cfg
