@@ -55,7 +55,8 @@ setup(name=name,
         'trytond.ir': ['tryton.cfg', '*.xml', 'view/*.xml', 'locale/*.po'],
         'trytond.ir.module': ['*.xml'],
         'trytond.ir.ui': ['*.xml', '*.rng', '*.rnc'],
-        'trytond.res': ['tryton.cfg', '*.xml', 'view/*.xml', 'locale/*.po'],
+        'trytond.res': [
+            'tryton.cfg', '*.xml', '*.html', 'view/*.xml', 'locale/*.po'],
         'trytond.tests': ['tryton.cfg', '*.xml', 'forbidden.txt'],
         },
     scripts=['bin/trytond', 'bin/trytond-admin', 'bin/trytond-cron'],
