@@ -1,0 +1,22 @@
+<!DOCTYPE html>
+<html xmlns:py="http://genshi.edgewall.org/">
+    <head>
+        <title>Reset Password</title>
+    </head>
+    <body>
+        <div style="display: block; text-align: center">
+            <div>
+                <h1>Reset Password</h1>
+                <p>The password for your account, <strong>${record.login}</strong>, has been reset.<br/>
+                You must set a new one from the user's preferences.<br/>
+                You can connect with this temporary password <strong>${record.password_reset}</strong> to</p>
+                <a href="tryton://${hostname}/${database}">tryton://${hostname}/${database}</a><br/>
+                <a href="https://${hostname}/#${database}">https://${hostname}/#${database}</a><br/>
+            </div>
+            <hr style="margin-top: 20px; border-style: solid none none; border-color: #EEE"></hr>
+            <div style="font-size: 80%; color: #777">
+                <p>The password will expire at <time datetime="${record.password_reset_expire.isoformat()}">${expire} UTC</time>.</p>
+            </div>
+        </div>
+    </body>
+</html>
